feat: coupon index, show. updates migrations, views, models, and controllers

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -31,3 +31,7 @@
     </section>
   </ul>
 </div>
+
+<div class="col-sm-12">
+  <%= link_to "View All Coupons", merchant_coupons_path(@merchant) %>
+</div>
