--- a/app/views/coupons/index.html.erb
+++ b/app/views/coupons/index.html.erb
@@ -5,3 +5,11 @@
     <li><%= coupon.name %></li>
   <% end %>
 </ul>
+
+<%= link_to "Create New Coupon", new_merchant_coupon_path(@merchant) %>
+
+
+
+
+
+
