--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,3 +1,4 @@
+<form>
 <%= form_with model: model, method: method, url: url, class: 'merchant_item_form', local: true do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %><br/><br/>
@@ -7,3 +8,4 @@
   <%= f.text_field :unit_price %><br/><br/>
   <%= f.submit 'Submit'%>
 <% end %>
+</form>
